--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -8,14 +8,24 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="lib/jasmine-jquery-1.3.1.js"></script>
+  
+  <!-- include library files here... -->
+  <script type="text/javascript" src="../lib/jQuery/jquery-1.8.0.min.js"></script>
+  <script type="text/javascript" src="../lib/jQuery/jquery-ui-1.8.18.custom.min.js"></script>
+  <script type="text/javascript" src="../lib/jQuery/jquery.i18n.properties-min.js"></script>
+  <script type="text/javascript" src="../lib/jQuery/jquery.tmpl.js"></script>
+  <script type="text/javascript" src="../lib/Ol/OpenLayers.js"></script>
+  <script type="text/javascript" src="../lib/YAML/js-yaml.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="spec/PlayerSpec.js"></script>
+  <script type="text/javascript" src="../src/XVM.js"></script>
+  <script type="text/javascript" src="../src/Loader/Reader.js"></script>  
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="src/Player.js"></script>
-  <script type="text/javascript" src="src/Song.js"></script>
+  <script type="text/javascript" src="spec/SpecReader.js"></script>
+
 
   <script type="text/javascript">
     (function() {
