Reads from config file, GET parameters and url

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -22,9 +22,11 @@
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="../src/XVM.js"></script>
   <script type="text/javascript" src="../src/Loader/Reader.js"></script>  
+  <script type="text/javascript" src="../src/Loader/Config.js"></script> 
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecReader.js"></script>
+  <script type="text/javascript" src="spec/SpecConfig.js"></script>
 
 
   <script type="text/javascript">
