Added Layers from YAML file

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -21,12 +21,16 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="../src/XVM.js"></script>
+  <script type="text/javascript" src="../src/Map.js"></script> 
   <script type="text/javascript" src="../src/Loader/Reader.js"></script>  
-  <script type="text/javascript" src="../src/Loader/Config.js"></script> 
+  <script type="text/javascript" src="../src/Loader/Config.js"></script>
+  <script type="text/javascript" src="../src/Loader/Layers.js"></script>
+  <script type="text/javascript" src="../src/Event/EventBus.js"></script> 
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/SpecReader.js"></script>
   <script type="text/javascript" src="spec/SpecConfig.js"></script>
+  <script type="text/javascript" src="spec/SpecLayers.js"></script>
+  <script type="text/javascript" src="spec/SpecMap.js"></script>
 
 
   <script type="text/javascript">
