--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -28,6 +28,7 @@
   <script type="text/javascript" src="../src/Event/EventBus.js"></script> 
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/SpecReader.js"></script>
   <script type="text/javascript" src="spec/SpecConfig.js"></script>
   <script type="text/javascript" src="spec/SpecLayers.js"></script>
   <script type="text/javascript" src="spec/SpecMap.js"></script>
