--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -25,7 +25,11 @@
   <script type="text/javascript" src="../src/Loader/Reader.js"></script>  
   <script type="text/javascript" src="../src/Loader/Config.js"></script>
   <script type="text/javascript" src="../src/Loader/Layers.js"></script>
-  <script type="text/javascript" src="../src/Event/EventBus.js"></script> 
+  <script type="text/javascript" src="../src/Event/EventBus.js"></script>
+  <script type="text/javascript" src="../src/Class.js"></script>
+  <script type="text/javascript" src="../src/Control/Control.js"></script>
+  <script type="text/javascript" src="spec/aux/ControlFake.js"></script>
+
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecReader.js"></script>
