Controls reads from file a control list and load it
Controls reads a control list and uses Reader to get control code
and load it into app

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -19,15 +19,17 @@
   <script type="text/javascript" src="../lib/YAML/js-yaml.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="../src/XVM.js"></script>
   <script type="text/javascript" src="../src/Map.js"></script> 
+  <script type="text/javascript" src="../src/Class.js"></script>
   <script type="text/javascript" src="../src/Loader/Reader.js"></script>  
   <script type="text/javascript" src="../src/Loader/Config.js"></script>
   <script type="text/javascript" src="../src/Loader/Layers.js"></script>
+  <script type="text/javascript" src="../src/Loader/Controls.js"></script>
   <script type="text/javascript" src="../src/Event/EventBus.js"></script>
-  <script type="text/javascript" src="../src/Class.js"></script>
   <script type="text/javascript" src="../src/Control/Control.js"></script>
+  
+  <!-- auxiliary files-->
   <script type="text/javascript" src="spec/aux/ControlFake.js"></script>
 
 
@@ -36,6 +38,7 @@
   <script type="text/javascript" src="spec/SpecConfig.js"></script>
   <script type="text/javascript" src="spec/SpecLayers.js"></script>
   <script type="text/javascript" src="spec/SpecMap.js"></script>
+  <script type="text/javascript" src="spec/SpecControls.js"></script>
 
 
   <script type="text/javascript">
