--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -28,6 +28,7 @@
   <script type="text/javascript" src="../src/Loader/Controls.js"></script>
   <script type="text/javascript" src="../src/Event/EventBus.js"></script>
   <script type="text/javascript" src="../src/Control/Control.js"></script>
+  <script type="text/javascript" src="../src/Control/ControlLoader.js"></script>
   
   <!-- auxiliary files-->
   <script type="text/javascript" src="spec/aux/ControlFake.js"></script>
@@ -39,7 +40,7 @@
   <script type="text/javascript" src="spec/SpecLayers.js"></script>
   <script type="text/javascript" src="spec/SpecMap.js"></script>
   <script type="text/javascript" src="spec/SpecControls.js"></script>
-
+  <script type="text/javascript" src="spec/SpecControlLoader.js"></script>
 
   <script type="text/javascript">
     (function() {
