Added MousePosition Control with new structure
Using Control.js we created a MousePosition control adapted to XVM environment
and we add to XVM.Map. Maybe there problems with services or with Map. TEST this question

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="../src/Event/EventBus.js"></script>
   <script type="text/javascript" src="../src/Control/Control.js"></script>
   <script type="text/javascript" src="../src/Control/ControlLoader.js"></script>
+  <script type="text/javascript" src="../src/Control/MousePosition/MousePosition.js"></script>
   
   <!-- auxiliary files-->
   <script type="text/javascript" src="spec/aux/ControlFake.js"></script>
@@ -41,6 +42,7 @@
   <script type="text/javascript" src="spec/SpecMap.js"></script>
   <script type="text/javascript" src="spec/SpecControls.js"></script>
   <script type="text/javascript" src="spec/SpecControlLoader.js"></script>
+  <script type="text/javascript" src="spec/SpecMousePosition.js"></script>
 
   <script type="text/javascript">
     (function() {
