--- a/xvm.html
+++ b/xvm.html
@@ -10,10 +10,14 @@
 		<script src="lib/Ol/OpenLayers.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
 		<script src="src/XVM.js"></script>
+		<script src="src/Class.js"></script>
 		<script src="src/Map.js"></script>
-		<script src="src/Loader/Config.js"></script>
 		<script src="src/Loader/Reader.js"></script>
+		<script src="src/Loader/Config.js"></script>
 		<script src="src/Loader/Layers.js"></script>
+		<script src="src/Loader/Controls.js"></script>
+		<script src="src/Control/Control.js"></script>
+		<script src="src/Control/ControlLoader.js"></script>
 		<script src="src/Event/EventBus.js"></script>
 
 		<script type="text/javascript">
@@ -23,6 +27,8 @@
 				var reader = new XVM.Loader.Reader();
 				var config = new XVM.Loader.Config(reader);
 				var layers = new XVM.Loader.Layers(reader);
+				var controls = new XVM.Loader.Controls(reader);
+				controls.readControls();
 			});
 		</script>
 	</head>
