--- a/xvm.html
+++ b/xvm.html
@@ -8,6 +8,7 @@
 
 		<script src="lib/jQuery/jquery-1.8.0.min.js"></script>
 		<script src="lib/Ol/OpenLayers.js"></script>
+		<script src="lib/YAML/es5-shims.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
 		<script src="src/XVM.js"></script>
 		<script src="src/Class.js"></script>
