Updated the test runner.
Now it includes all the test that work
properly as of now.

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -36,13 +36,15 @@
 
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/SpecEventBus.js"></script>
   <script type="text/javascript" src="spec/SpecReader.js"></script>
   <script type="text/javascript" src="spec/SpecConfig.js"></script>
-  <script type="text/javascript" src="spec/SpecLayers.js"></script>
-  <script type="text/javascript" src="spec/SpecMap.js"></script>
+  <script type="text/javascript" src="spec/SpecControl.js"></script>
   <script type="text/javascript" src="spec/SpecControls.js"></script>
   <script type="text/javascript" src="spec/SpecControlLoader.js"></script>
-  <script type="text/javascript" src="spec/SpecMousePosition.js"></script>
+  <script type="text/javascript" src="spec/SpecLayers.js"></script>
+  <script type="text/javascript" src="spec/SpecMap.js"></script>
+  <!-- <script type="text/javascript" src="spec/SpecMousePosition.js"></script> -->
 
   <script type="text/javascript">
     (function() {
