--- a/xvm.html
+++ b/xvm.html
@@ -6,6 +6,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title>:::XVM:::</title>
 
+		<link rel="stylesheet" href="lib/ol/theme/default/style.css" type="text/css">
+		<link rel="stylesheet" href="styles/style_map.css" type="text/css">
+		<link rel="stylesheet" href="styles/custom-theme/jquery-ui-1.8.18.custom.css" type="text/css">
 		<script src="lib/jQuery/jquery-1.8.0.min.js"></script>
 		<script src="lib/Ol/OpenLayers.js"></script>
 		<script src="lib/YAML/es5-shims.js"></script>
@@ -41,6 +44,6 @@
 		</script>
 	</head>
 	<body>
-		<div id="map" style="height:500px"></div>
+		<div id="map" class="smallmap" style="height:500px"></div>
 	</body>
 </html>
