Internationalization messages updated.
Now we have internationalization support for
english, spanish and galician.

--- a/xvm.html
+++ b/xvm.html
@@ -29,7 +29,7 @@
 			$(document).ready(function() {
 				// We configure the internationalization support
 				jQuery.i18n.properties({
-				    name:'messages',
+				    name:'text',
 				    path:'config/',
 				    mode:'both'
 				});
