Internationalization support for control's configs
Now the config objects have internationalization
support.

--- a/xvm.html
+++ b/xvm.html
@@ -17,6 +17,7 @@
 		<script src="src/XVM.js"></script>
 		<script src="src/Class.js"></script>
 		<script src="src/Map.js"></script>
+		<script src="src/XVMUtils.js"></script>
 		<script src="src/Loader/Reader.js"></script>
 		<script src="src/Loader/Config.js"></script>
 		<script src="src/Loader/Layers.js"></script>
