--- a/xvm.html
+++ b/xvm.html
@@ -13,7 +13,12 @@
 		<script src="lib/Ol/OpenLayers.js"></script>
 		<script src="lib/YAML/es5-shims.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
-		<script src="lib/jQuery/jquery.i18n.properties-min.js"></script>
+		<script src="lib/jQuery/jquery.i18n.js"></script>
+		<script src="lib/jQuery/jquery.i18n.messages.js"></script>
+		<script src="lib/jQuery/jquery.i18n.fallbacks.js"></script>
+		<script src="lib/jQuery/jquery.i18n.parser.js"></script>
+		<script src="lib/jQuery/jquery.i18n.emitter.js"></script>
+		<script src="lib/jQuery/jquery.i18n.language.js"></script>
 		<script src="src/XVM.js"></script>
 		<script src="src/Class.js"></script>
 		<script src="src/Map.js"></script>
@@ -25,15 +30,12 @@
 		<script src="src/Control/Control.js"></script>
 		<script src="src/Control/ControlLoader.js"></script>
 		<script src="src/Event/EventBus.js"></script>
+		<link rel="localization" hreflang="en" href="config/text_en.json" type="application/l10n+json"/>
+		<link rel="localization" hreflang="es" href="config/text_es.json" type="application/l10n+json"/>
+		<link rel="localization" hreflang="gl" href="config/text_gl.json" type="application/l10n+json"/>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
-				// We configure the internationalization support
-				jQuery.i18n.properties({
-				    name:'text',
-				    path:'config/',
-				    mode:'both'
-				});
 				XVM.EventBus = new XVM.Event.EventBus();
 				var map = new XVM.Map();
 				var reader = new XVM.Loader.Reader();
