Example map made bigger.
The map included as an example was starting to
be too small for all the controls it has. Now
it's bigger.

--- a/xvm.html
+++ b/xvm.html
@@ -47,6 +47,6 @@
 		</script>
 	</head>
 	<body>
-		<div id="map" class="smallmap" style="height:500px"></div>
+		<div id="map" class="smallmap"></div>
 	</body>
 </html>
