Map creation code refactored.
Now creating a map with the default values requires
much less code. We accomplished this by making a
better use of the global class XVM. Almost every
aspect can still be customized by modifying some
values and XVM functions, or directly by instan-
tiating everything in the top code.

--- a/xvm.html
+++ b/xvm.html
@@ -39,13 +39,7 @@
 
 		<script type="text/javascript">
 			$(document).ready(function() {
-				XVM.EventBus = new XVM.Event.EventBus();
-				var map = new XVM.Map();
-				var reader = new XVM.Loader.Reader();
-				var config = new XVM.Loader.Config(reader);
-				var layers = new XVM.Loader.Layers(reader);
-				var controls = new XVM.Loader.Controls(reader);
-				controls.readControls();
+				XVM.createDefaultMap();
 			});
 		</script>
 	</head>
