--- a/xvm.html
+++ b/xvm.html
@@ -36,6 +36,11 @@
 		<link rel="localization" hreflang="en" href="config/text_en.json" type="application/l10n+json"/>
 		<link rel="localization" hreflang="es" href="config/text_es.json" type="application/l10n+json"/>
 		<link rel="localization" hreflang="gl" href="config/text_gl.json" type="application/l10n+json"/>
+		
+		<!-- TOC  -->
+		<script src="toc/src/TOC.js"></script>		
+		<script src="toc/src/Class.js"></script>
+		<script src="toc/src/Control.js"></script>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
@@ -44,6 +49,7 @@
 		</script>
 	</head>
 	<body>
-		<div id="map" class="smallmap"></div>
+		<div id="map" class="smallmap"><div id="toc"></div></div>
+		
 	</body>
 </html>
