--- a/xvm.html
+++ b/xvm.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="styles/dynatree/ui.dynatree.css" type="text/css">
 		<link rel="stylesheet" href="lib/Ol/theme/default/style.css" type="text/css">
 		<link rel="stylesheet" href="styles/style_map.css" type="text/css">
-		<link rel="stylesheet" href="styles/custom-theme/jquery-ui-1.8.18.custom.css" type="text/css">
+		<link rel="stylesheet" href="styles/custom-theme/jquery-ui-1.9.1.custom.min.css" type="text/css">
 		<script src="lib/jQuery/jquery-1.8.0.min.js"></script>
 		<script src="lib/jQuery/jquery-ui-1.9.1.custom.min.js"></script>
 		<script src="lib/Ol/OpenLayers.js"></script>
