--- a/xvm.html
+++ b/xvm.html
@@ -41,6 +41,8 @@
 		<script src="toc/src/TOC.js"></script>		
 		<script src="toc/src/Class.js"></script>
 		<script src="toc/src/Control.js"></script>
+		<script src="toc/src/Panel/Panel.js"></script>
+		<script src="toc/src/Panel/Legend.js"></script>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
