--- a/xvm.html
+++ b/xvm.html
@@ -13,7 +13,7 @@
 		<script src="lib/jQuery/jquery-1.8.0.min.js"></script>
 		<script src="lib/jQuery/jquery-ui-1.9.1.custom.min.js"></script>
 		<script src="lib/Ol/OpenLayers.js"></script>
-		<script src="lib/YAML/es5-shims.js"></script>
+		<script src="lib/YAML/es5-shim.min.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
 		<script src="lib/jQuery/jquery.dynatree.min.js"></script>
 		<script src="lib/jQuery/jquery.i18n.js"></script>
