Update js-yaml.js and add e5-sham.js for IE incompabilities

--- a/xvm.html
+++ b/xvm.html
@@ -14,6 +14,7 @@
 		<script src="lib/jQuery/jquery-ui-1.9.1.custom.min.js"></script>
 		<script src="lib/Ol/OpenLayers.js"></script>
 		<script src="lib/YAML/es5-shim.min.js"></script>
+		<script src="lib/YAML/es5-sham.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
 		<script src="lib/jQuery/jquery.dynatree.min.js"></script>
 		<script src="lib/jQuery/jquery.i18n.js"></script>
