--- a/demo/xvm.html
+++ b/demo/xvm.html
@@ -13,8 +13,7 @@
 		<script src="lib/jQuery/jquery-1.8.0.min.js"></script>
 		<script src="lib/jQuery/jquery-ui-1.9.1.custom.min.js"></script>
 		<script src="lib/Ol/OpenLayers.js"></script>
-		<script src="lib/YAML/es5-shim.min.js"></script>
-		<script src="lib/YAML/es5-sham.js"></script>
+		<script src="lib/YAML/es5-shims.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
 		<script src="lib/jQuery/jquery.dynatree.min.js"></script>
 		<script src="lib/jQuery/jquery.i18n.js"></script>
@@ -42,8 +41,6 @@
 		<script src="toc/src/TOC.js"></script>		
 		<script src="toc/src/Class.js"></script>
 		<script src="toc/src/Control.js"></script>
-		<script src="toc/src/Panel/Panel.js"></script>
-		<script src="toc/src/Panel/Legend.js"></script>
 
 		<script type="text/javascript">
 			$(document).ready(function() {
@@ -53,5 +50,6 @@
 	</head>
 	<body>
 		<div id="map" class="smallmap"><div id="toc"></div></div>
+		
 	</body>
 </html>
