--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -30,6 +30,7 @@
   <script type="text/javascript" src="../src/Control/Control.js"></script>
   <script type="text/javascript" src="../src/Control/ControlLoader.js"></script>
   <script type="text/javascript" src="../src/Control/MousePosition/MousePosition.js"></script>
+  <script type="text/javascript" src="../src/Control/FeatureInfo/FeatureInfo.js"></script>
   
   <!-- auxiliary files-->
   <script type="text/javascript" src="spec/aux/ControlFake.js"></script>
@@ -45,6 +46,7 @@
   <script type="text/javascript" src="spec/SpecLayers.js"></script>
   <script type="text/javascript" src="spec/SpecMap.js"></script>
   <!-- <script type="text/javascript" src="spec/SpecMousePosition.js"></script> -->
+  <script type="text/javascript" src="spec/Control/SpecFeatureInfo.js"></script>
 
   <script type="text/javascript">
     (function() {
