--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
   "http://www.w3.org/TR/html4/loose.dtd">
-<html><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<html>
 <head>
+
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Jasmine Spec Runner</title>
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.2.0/jasmine_favicon.png">
