Most tests updated to new code.
Not all of them work yet, but most do.

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="../src/Loader/Layers.js"></script>
   <script type="text/javascript" src="../src/Loader/Controls.js"></script>
   <script type="text/javascript" src="../src/Event/EventBus.js"></script>
+  <script type="text/javascript" src="../src/XVMUtils.js"></script>
   
   <!-- include control source files --> 
   <script type="text/javascript" src="../src/Control/Control.js"></script>
