--- a/xvm.html
+++ b/xvm.html
@@ -23,6 +23,7 @@
 		<script src="lib/jQuery/jquery.i18n.parser.js"></script>
 		<script src="lib/jQuery/jquery.i18n.emitter.js"></script>
 		<script src="lib/jQuery/jquery.i18n.language.js"></script>
+		<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 		<script src="src/XVM.js"></script>
 		<script src="src/Class.js"></script>
 		<script src="src/Map.js"></script>
