Added a small legend to the custom layer switcher.
Now alongside each Vector layer a small box with its
fill color (stroke color is ignored) is drawn. Had to
made a few changes in dynatree, and thus I'm uploading
new versions for both the debug and minified format.

--- a/xvm.html
+++ b/xvm.html
@@ -16,7 +16,7 @@
 		<script src="lib/YAML/es5-shim.min.js"></script>
 		<script src="lib/YAML/es5-sham.js"></script>
 		<script src="lib/YAML/js-yaml.js"></script>
-		<script src="lib/jQuery/jquery.dynatree.min.js"></script>
+		<script src="lib/jQuery/jquery.dynatree.custom-colorbox-1.2.4.js"></script>
 		<script src="lib/jQuery/jquery.i18n.js"></script>
 		<script src="lib/jQuery/jquery.i18n.messages.js"></script>
 		<script src="lib/jQuery/jquery.i18n.fallbacks.js"></script>
