Tests errors fixed.
Tests were not working with the current code, so
we they have been updated to the most recent
methods and workflow and now they work fine.

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -53,9 +53,9 @@
   <script type="text/javascript" src="spec/SpecMap.js"></script>
   
   <!-- include Control tests -->
-  <script type="text/javascript" src="spec/Control/SpecMousePosition.js"></script> 
+  <!-- <script type="text/javascript" src="spec/Control/SpecMousePosition.js"></script>
+  <script type="text/javascript" src="spec/Control/SpecWFSLayer.js"></script> -->
   <script type="text/javascript" src="spec/Control/SpecFeatureInfo.js"></script>
-  <script type="text/javascript" src="spec/Control/SpecWFSLayer.js"></script>
 
   <script type="text/javascript">
     (function() {
