--- a/xvm.html
+++ b/xvm.html
@@ -6,6 +6,9 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title>:::XVM:::</title>
 
+		<!--[if lt IE 8]>
+    		<script src="lib/json2.js"></script>
+		<![endif]-->
 		<link rel="stylesheet" href="styles/dynatree/ui.dynatree.css" type="text/css">
 		<link rel="stylesheet" href="lib/Ol/theme/default/style.css" type="text/css">
 		<link rel="stylesheet" href="styles/style_map.css" type="text/css">
