Fix to load parameters.general.lang (still not working)

--- a/xvm.html
+++ b/xvm.html
@@ -37,10 +37,13 @@
 		<script src="src/Loader/Controls.js"></script>
 		<script src="src/Control/Control.js"></script>
 		<script src="src/Control/ControlLoader.js"></script>
-		<script src="src/Event/EventBus.js"></script>
+    <script src="src/Event/EventBus.js"></script>
+
 		<link rel="localization" hreflang="en" href="config/text_en.json" type="application/l10n+json"/>
 		<link rel="localization" hreflang="es" href="config/text_es.json" type="application/l10n+json"/>
 		<link rel="localization" hreflang="gl" href="config/text_gl.json" type="application/l10n+json"/>
+    <script src="lib/Ol/lib/OpenLayers/Lang/es.js"></script>
+    <script src="lib/Ol/lib/OpenLayers/Lang/gl.js"></script>
 		
 		<!-- TOC  -->
 		<script src="toc/src/TOC.js"></script>		
